--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "converttoimage",
   "version": "1.0.0",
   "description": "",
-  "main": "convert.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/caominhhung1991/ConvertToImage#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "express": "^4.16.2",
     "html2canvas": "^1.0.0-alpha.9",
     "jquery": "^3.3.1",
+    "mongodb": "^3.0.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
   }
